@@ -18,9 +18,10 @@ object.size <- function(x)
     structure(.Internal(object.size(x)), class="object_size")
 
 print.object_size <-
-    function(x, quote = FALSE, units = c("b", "auto", "Kb", "Mb", "Gb"), ...)
+    function(x, quote = FALSE, units = "b", ...)
 {
-    units <- match.arg(units)
+    units <- match.arg(units, c("b", "auto", "Kb", "Mb", "Gb",
+                                "B", "KB", "MB", "GB"))
     if (units == "auto") {
         if (x >= 1024^3) units <- "Gb"
         else if (x >= 1024^2) units <- "Mb"
@@ -28,10 +29,10 @@ print.object_size <-
         else units <- "b"
     }
     y <- switch(units,
-                "b" = paste(x, "bytes"),
-                "Kb" = paste(round(x/1024, 1L), "Kb"),
-                "Mb" = paste(round(x/1024^2, 1L), "Mb"),
-                "Gb" = paste(round(x/1024^3, 1L), "Gb")
+                "b" =, "B" = paste(x, "bytes"),
+                "Kb" =, "KB" = paste(round(x/1024, 1L), "Kb"),
+                "Mb" =, "MB" = paste(round(x/1024^2, 1L), "Mb"),
+                "Gb" =, "GB" = paste(round(x/1024^3, 1L), "Gb")
                 )
     if(quote) print.default(y, ...) else cat(y, "\n", sep="")
     invisible(x)
